--- a/src/app/modules/home/components/header/header.component.html
+++ b/src/app/modules/home/components/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<p-menubar>
+    <ng-template pTemplate="start">
+        <!-- <img src="assets/logos/kinjo.jpg" height="30" class="mr-2"> -->
+        <span>Kinjo</span>
+        <!-- <p>Kinjo</p> -->
+    </ng-template>
+    <ng-template pTemplate="end">
+        <input type="text" pInputText placeholder="Search">
+    </ng-template>
+</p-menubar>
