--- a/src/app/modules/home/components/header/header.component.html
+++ b/src/app/modules/home/components/header/header.component.html
@@ -1,6 +1,6 @@
 <p-menubar>
     <ng-template pTemplate="start">
-        <!-- <img src="assets/logos/kinjo.jpg" height="30" class="mr-2"> -->
+        <img src="assets/logos/kinjo.png" height="30" class="mr-2">
         <span>Kinjo</span>
         <!-- <p>Kinjo</p> -->
     </ng-template>
