--- a/src/app/modules/auth/pages/registrar/registrar.component.html
+++ b/src/app/modules/auth/pages/registrar/registrar.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-content-center">
     <p-card class="col-12 md:col-8 lg:col-6 mt-6">
-        <h5 class="mt-0 pt-0">{{ 'REGISTRAR.titulo' | translate }}</h5>
+        <p class="mt-0 pt-0 title text-2xl">{{ 'REGISTRAR.titulo' | translate }}</p>
 
         <form [formGroup]="registroForm" autocomplete="off" (ngSubmit)="registrar()">
             <div class="grid p-fluid">
@@ -69,6 +69,16 @@
                         (onChange)="hide()">
                     </p-checkbox>
                 </div>
+            </div>
+
+            <div class="flex justify-content-end mt-4">
+                <button
+                    pButton
+                    type="submit"
+                    class="p-button-primary"
+                    [disabled]="registroForm.invalid">
+                    {{ 'REGISTRAR.btnRegistrar' | translate }}
+                </button>
             </div>
         </form>
     </p-card>
