--- a/src/app/modules/home/components/menu/menu.component.html
+++ b/src/app/modules/home/components/menu/menu.component.html
@@ -1,7 +1,4 @@
-<!-- <p-menu [model]="items"></p-menu> -->
-<div #myDiv>
-    <p-sidebar [(visible)]="isDisplay" appendTo="myDiv">
-        <div>Hola</div>
-        <div>Hola 2</div>
-    </p-sidebar>
+<div class="flex justify-content-center">
+    <img src="/assets/images/kinjo.png" class="p-mr-3" alt="">
 </div>
+<p-menu [model]="items"></p-menu>
