--- a/src/app/modules/home/page/home/home.component.html
+++ b/src/app/modules/home/page/home/home.component.html
@@ -1,8 +1,8 @@
 <!-- Header de la aplicación -->
-<kj-header></kj-header>
+<kj-header class="mt-0 p-0"></kj-header>
 
 <div class="grid">
-    <div class="md:col-3 lg:col-3">
+    <div class="md:col-3 lg:col-2">
         <kj-menu></kj-menu>
     </div>
     <div class="md:col-9 lg:col-9 p-3">
