--- a/src/app/modules/eventos/pages/eventos-page/eventos-page.component.html
+++ b/src/app/modules/eventos/pages/eventos-page/eventos-page.component.html
@@ -1,11 +1,17 @@
-<div class="container mt-3">
-    <div class="row">
-        <div class="col-7">
-            <kj-table-filter [information]="data"></kj-table-filter>
-        </div>
-        <div class="col-5">
-            <kj-calendar></kj-calendar>
-            <!-- <p-calendar [(ngModel)]="timeNow" [inline]="true" [showWeek]="true"></p-calendar> -->
+<p-panel >
+    <ng-template pTemplate="header">
+        Eventos
+    </ng-template>
+
+    <div class="container mt-3">
+        <div class="grid">
+            <div class="col-7">
+                <kj-table-filter [information]="data"></kj-table-filter>
+            </div>
+            <div class="col-5">
+                <!-- <kj-calendar></kj-calendar> -->
+                <p-calendar [(ngModel)]="timeNow" [inline]="true"></p-calendar>
+            </div>
         </div>
     </div>
-</div>
+</p-panel>
