--- a/src/app/modules/home/page/home/home.component.html
+++ b/src/app/modules/home/page/home/home.component.html
@@ -5,7 +5,7 @@
     <div class="md:col-3 lg:col-2">
         <kj-menu></kj-menu>
     </div>
-    <div class="md:col-9 lg:col-9 p-3">
+    <div class="md:col-9 lg:col-10 pt-3">
         <!-- Body -->
         <router-outlet></router-outlet>
     </div>
