--- a/src/app/modules/auth/pages/registrar/registrar.component.html
+++ b/src/app/modules/auth/pages/registrar/registrar.component.html
@@ -10,7 +10,7 @@
                     <div *ngIf="formErrors.mostrarError(registroForm, 'nombre') && (nombre.dirty || nombre.touched)">
                         <small class="p-error">
                             {{
-                                'REGISTRAR.FormErrors.' + formErrors.errorMsg(registroForm, 'nombre') | translate
+                                'FormErrors.' + formErrors.errorMsg(registroForm, 'nombre') | translate
                             }}
                         </small>
                     </div>
@@ -21,7 +21,7 @@
                     <div *ngIf="formErrors.mostrarError(registroForm, 'apellido') && (apellido.dirty || apellido.touched)">
                         <small class="p-error">
                             {{
-                                'REGISTRAR.FormErrors.' + formErrors.errorMsg(registroForm, 'apellido') | translate
+                                'FormErrors.' + formErrors.errorMsg(registroForm, 'apellido') | translate
                             }}
                         </small>
                     </div>
@@ -32,7 +32,7 @@
                     <div *ngIf="formErrors.mostrarError(registroForm, 'usuario') && (usuario.dirty || usuario.touched)">
                         <small class="p-error">
                             {{
-                                'REGISTRAR.FormErrors.' + formErrors.errorMsg(registroForm, 'usuario') | translate
+                                'FormErrors.' + formErrors.errorMsg(registroForm, 'usuario') | translate
                             }}
                         </small>
                     </div>
@@ -45,7 +45,7 @@
                     <div *ngIf="formErrors.mostrarError(registroForm, 'contrasena') && (contrasena.dirty || contrasena.touched)">
                         <small class="p-error">
                             {{
-                                'REGISTRAR.FormErrors.' + formErrors.errorMsg(registroForm, 'contrasena') | translate
+                                'FormErrors.' + formErrors.errorMsg(registroForm, 'contrasena') | translate
                             }}
                         </small>
                     </div>
@@ -56,7 +56,7 @@
                     <div *ngIf="formErrors.mostrarError(registroForm, 'confirmacion') && (confirmacion.dirty || confirmacion.touched)">
                         <small class="p-error">
                             {{
-                                'REGISTRAR.FormErrors.' + formErrors.errorMsg(registroForm, 'confirmacion') | translate
+                                'FormErrors.' + formErrors.errorMsg(registroForm, 'confirmacion') | translate
                             }}
                         </small>
                     </div>
