--- a/src/app/modules/espacios/pages/espacios-page/espacios-page.component.html
+++ b/src/app/modules/espacios/pages/espacios-page/espacios-page.component.html
@@ -1,1 +1,44 @@
-<p>espacios-page works!</p>
+<p-panel>
+    <ng-template pTemplate="header">
+        {{ 'ESPACIOS.title' | translate }}
+    </ng-template>
+
+    <div class="grid p-fluid">
+        <div class="col-12 md:col-6 lg:col-4">
+            <p-card header="Simple Card" >
+                <ng-template pTemplate="header">
+                    <!-- <img alt="Card" src="assets/showcase/images/usercard.png"> -->
+                </ng-template>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+                    quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+            </p-card>
+        </div>
+        <div class="col-12 md:col-6 lg:col-4">
+            <p-card header="Simple Card" >
+                <ng-template pTemplate="header">
+                    <!-- <img alt="Card" src="assets/showcase/images/usercard.png"> -->
+                </ng-template>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+                    quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+            </p-card>
+        </div>
+        <div class="col-12 md:col-6 lg:col-4">
+            <p-card header="Simple Card" >
+                <ng-template pTemplate="header">
+                    <!-- <img alt="Card" src="assets/showcase/images/usercard.png"> -->
+                </ng-template>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+                    quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+            </p-card>
+        </div>
+        <div class="col-12 md:col-6 lg:col-4">
+            <p-card header="Simple Card" >
+                <ng-template pTemplate="header">
+                    <!-- <img alt="Card" src="assets/showcase/images/usercard.png"> -->
+                </ng-template>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+                    quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+            </p-card>
+        </div>
+    </div>
+</p-panel>
