--- a/src/app/modules/home/page/home/home.component.html
+++ b/src/app/modules/home/page/home/home.component.html
@@ -1,11 +1,13 @@
 <!-- Header de la aplicación -->
-<kj-header class="mt-0 p-0"></kj-header>
+<kj-header class="mt-0 p-0" (openMenu)="showMenu($event)"></kj-header>
 
-<div class="grid">
-    <div class="md:col-3 lg:col-2">
+<kj-menu #menuC [popup]=true></kj-menu>
+
+<div class="grid mt-0 p-0">
+    <div class="col-12 md:col-3 lg:col-2 hidden-xs hidden-sm">
         <kj-menu></kj-menu>
     </div>
-    <div class="md:col-9 lg:col-10 pt-3">
+    <div class="col-12 md:col-9 lg:col-10 pt-3">
         <!-- Body -->
         <router-outlet></router-outlet>
     </div>
